using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringClass
{
    public static string TAG_ISIDLE = "isIdle";
    public static string TAG_ISRUNNING = "isRunning";
    public static string TAG_STUNWALKING = "StunWalking";
    public static string TAG_HIT = "Hit";
    public static string TAG_X20 = "x20";
    public static string TAG_HITFINAL = "HitFinal";
    public static string TAG_SLEDGEHAMMER = "sledgehammer";
    public static string TAG_FINISH = "Finish";
    public static string TAG_WALL = "wall";
    public static string TAG_SCORE = "score";
    public static string TAG_BOSS = "Boss";
}
